# 2110327

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: scratch_pad.cpp
src/grader/a57_m3_tile/: tile.cpp
src/grader/a57_m4_gaa/: gaa.cpp
src/grader/a57_m4_supply/: supply.cpp
src/grader/a57_m5_mcs2/: mcs2.cpp
src/grader/a58_m3_hanamard/: hanamard.cpp
src/grader/a58_q1b_triple/: triple_sum.cpp
src/grader/a59_midp4_mcsw/: a59_midp4_mcsw.cpp
src/grader/a59_q1_ones/: ones.cpp
src/grader/a60_q1_matmod/: matrix_modulo.cpp
src/grader/a60_q1_number1/: number1.cpp
src/grader/a60a_midp3_bigger/: bigger_billboard.cpp
src/grader/a60a_midp4_walk/: walk.cpp
src/grader/a60b_mid_p4_merge/: merge.cpp  merge_sort_count.cpp
src/grader/a60b_midp2_rope/: rope.cpp
src/grader/a62_q1a_jumping/: jumping.cpp
src/grader/a62_q1a_recur/: recur_matrix.cpp
src/grader/a62_q1b_chocolate/: chocolate.cpp
src/grader/a63_q1a_101/: oneohone.cpp  oneohone_nobonus.cpp
src/grader/a63_q1b_2side/: twoside.cpp
src/grader/a64_q2_table_no_11/: table_no_11.cpp
src/grader/a64_q2_two_mcs/: two_mcs.cpp
src/grader/dc&dp/a57_f3_drainage/: drainage.cpp
src/grader/dc&dp/a58_m3_hanamard/: hanamard.cpp
src/grader/dc&dp/a59_midp1_lcs/: lcs_text.cpp
src/grader/dc&dp/a59_midp3_similar/: similar_string.cpp
src/grader/dc&dp/a59_midp4_mcsw/: a59_midp4_mcsw.cpp
src/grader/dc&dp/a59_q1_quicksum/: quicksum.cpp
src/grader/dc&dp/a60_q1_number1/: number1.cpp
src/grader/dc&dp/a60a_midp1_knapsack/: knapsack_items.cpp
src/grader/dc&dp/a60b_mid_p1_buffet/: buffet_line.cpp
src/grader/dc&dp/a60b_mid_p4_merge/: merge.cpp
src/grader/dc&dp/a60b_midp3_divide/: dividing.cpp
src/grader/dc&dp/a60b_q1_diagsum/: diagsum.cpp
src/grader/dc&dp/a60b_q2_pareto/: pareto.cpp
src/grader/dc&dp/a61_q1_thanos/: thanos.cpp
src/grader/dc&dp/a62_q2b_virus/: virus.cpp
src/grader/dc&dp/a63_q1a_buffet/: buffet.cpp
src/grader/dc&dp/a63_q1b_virus2/: virus2.cpp
src/grader/dc&dp/a64_q1_lawn_mowing/: lawn_mowing.cpp
src/grader/dc&dp/ex00e4/: gen_barcode.cpp  gen_barcode.rb
src/grader/dc&dp/ex00e5/: consecutive_ones.c  consecutive_ones.cpp
src/grader/dc&dp/ex01e3/: binary_search_2.cpp
src/grader/dc&dp/ex02h1/: closest.cpp
src/grader/dc&dp/ex02m2/: barcode.cpp
src/grader/dc&dp/ex03e1/: lcs.cpp
src/grader/dc&dp/ex03e2/: mcm_bottom_up.cpp  mcm_top_down.cpp
src/grader/dc&dp/ex04e1/: interval.cpp
src/grader/ex00e4/: gen_barcode.c  gen_barcode.rb
src/grader/ex00e5/: consecutive_ones.c  consecutive_ones.py  consecutive_ones.rb
src/grader/ex01e2/: mss.cpp
src/grader/ex01e4/: modulo_exponent.cpp
src/grader/ex01h1/: self_describing.cpp
src/grader/ex01m1/: tiling.cpp
src/grader/ex01m2/: inversion.cpp
src/grader/ex01m3/: larger_restaurant.cpp
src/grader/ex02e1/: fibonacci.cpp
src/grader/ex02e2/: binomial.cpp
src/grader/ex02e3/: binary_search3.cpp
src/grader/ex02m1/: triangle.cpp
src/grader/ex03e3/: coin.cpp
src/grader/ex03h1/: square.cpp
src/grader/ex03m1/: billboard.cpp
src/grader/ex03m2/: lis.cpp
src/grader/ex03m3/: pressure_station.cpp
src/grader/ex04e2/: fknapscak.cpp
src/grader/ex04e3/: teamwork.cpp
src/grader/ex04m1/: sort.cpp
src/grader/graph/a58_q3_columbia2/: columbia2.cpp
src/grader/graph/a58_q3_p3a_hacking/: hacking.cpp  hacking.rs
src/grader/graph/a59_q3_cycle/: cycle_in_tree.cpp
src/grader/graph/a59_q3_hole/: hole.cpp
src/grader/graph/a60a_q3_component/: component.cpp
src/grader/graph/a60a_q3_xor_road/: xor_road.cpp
src/grader/graph/a60b_q3_ikea/: ikea.cpp
src/grader/graph/a60b_q3_perimeter/: perimeter.cpp
src/grader/graph/a61_q2_farthest/: farthest.cpp
src/grader/graph/a62_q2a_line_graph/: line_graph.cpp
src/grader/graph/a62_q2a_pandemic/: pandemic.cpp
src/grader/graph/a64_q3_shortest_start/: shortest_start.cpp
src/grader/graph/a64_q3_wildfire/: wildfire.cpp
src/grader/graph/ex05e1/: shortest_path.cpp
src/grader/graph/ex05e2/: planning.cpp
src/grader/graph/ex05e3/: catapult.cpp
src/grader/graph/ex05m1/: detecting_cycle.cpp
src/grader/graph/ex05m2/: connection.cpp
src/grader/graph/ex06e1/: cable_company.cpp  cable_company.rs  cable_company_kruskal.cpp
src/grader/graph/ex06e2/: shortest_with_negative.cpp
src/grader/graph/ex06e3/: columbia.cpp  columbia.rs
src/grader/graph/ex06m1/: mass_relay.cpp
src/grader/graph/ex06m2/: exchange.cpp
src/grader/state_space/a64_q1_permu_before/: permu.cpp
src/grader/state_space/ex07e1_nqueen/: nqueen.cpp
src/grader/state_space/ex07e2_coloring/: coloring.cpp
src/grader/state_space/ex07e2_iss/: iss.cpp
src/grader/state_space/ex07m1_knapsack/: real_knapsack.cpp
src/grader/state_space/ex07m2_15puzzle/: 15puzzle.cpp
src/inclass/bruteforce/: gen_combination.cpp
src/inclass/insertion_sort/: insertion_sort  insertion_sort.cpp
src/inclass/mss/: mssneg1.cpp
src/inclass/perfect_number/: perfect_number.py
src/inclass/stable_marriage/: find_all_stable.py  smp.cpp
