cmake_minimum_required(VERSION 3.0.0)
project(2110327 VERSION 0.1.0)
add_compile_options(-Wall -Wshadow -D_GLIBCXX_DEBUG)
add_executable(scratch_pad src/scratch_pad.cpp)
set(CMAKE_CXX_STANDARD 17)

# Build targets for src/grader/dc&dp
add_executable(smp src/inclass/stable_marriage/smp.cpp)
add_executable(consecutive_ones_c src/grader/dc&dp/ex00e5/consecutive_ones.c)
add_executable(consecutive_ones_cpp src/grader/dc&dp/ex00e5/consecutive_ones.cpp)
add_executable(gen_barcode src/grader/dc&dp/ex00e4/gen_barcode.cpp)
add_executable(larger_restaurant src/grader/dc&dp/ex01m3/larger_restaurant.cpp)
add_executable(inversion src/grader/dc&dp/ex01m2/inversion.cpp)
add_executable(tiling src/grader/dc&dp/ex01m1/tiling.cpp)
add_executable(modulo_exponent src/grader/dc&dp/ex01e4/modulo_exponent.cpp)
add_executable(mss src/grader/dc&dp/ex01e2/mss.cpp)
add_executable(virus src/grader/dc&dp/a62_q2b_virus/virus.cpp)
add_executable(virus2 src/grader/dc&dp/a63_q1b_virus2/virus2.cpp)
add_executable(recur_matrix src/grader/dc&dp/a62_q1a_recur/recur_matrix.cpp)
add_executable(triple_sum src/grader/dc&dp/a58_q1b_triple/triple_sum.cpp)
add_executable(similar_string src/grader/dc&dp/a59_midp3_similar/similar_string.cpp)
add_executable(hanamard src/grader/dc&dp/a58_m3_hanamard/hanamard.cpp)
add_executable(thanos src/grader/dc&dp/a61_q1_thanos/thanos.cpp)
add_executable(matrix_modulo src/grader/dc&dp/a60_q1_matmod/matrix_modulo.cpp)
add_executable(pareto src/grader/dc&dp/a60b_q2_pareto/pareto.cpp)
add_executable(mcsw src/grader/dc&dp/a59_midp4_mcsw/a59_midp4_mcsw.cpp)
add_executable(a60b_mid_p4_merge src/grader/dc&dp/a60b_mid_p4_merge/merge.cpp)
add_executable(merge_sort_count src/grader/dc&dp/a60b_mid_p4_merge/merge_sort_count.cpp)
add_executable(closest_pair src/grader/dc&dp/ex02h1/closest.cpp)
add_executable(gaa src/grader/dc&dp/a57_m4_gaa/gaa.cpp)
add_executable(number1 src/grader/dc&dp/a60_q1_number1/number1.cpp)
add_executable(self_describing src/grader/dc&dp/ex01h1/self_describing.cpp)
add_executable(mcs2 src/grader/dc&dp/a57_m5_mcs2/mcs2.cpp)
add_executable(ones src/grader/dc&dp/a59_q1_ones/ones.cpp)
add_executable(fibonacci src/grader/dc&dp/ex02e1/fibonacci.cpp)
add_executable(binomial src/grader/dc&dp/ex02e2/binomial.cpp)
add_executable(billboard src/grader/dc&dp/ex03m1/billboard.cpp)
add_executable(lawn_mowing src/grader/dc&dp/a64_q1_lawn_mowing/lawn_mowing.cpp)
add_executable(triangle src/grader/dc&dp/ex02m1/triangle.cpp)
add_executable(mcm_top_down src/grader/dc&dp/ex03e2/mcm_top_down.cpp)
add_executable(mcm_bottom_up src/grader/dc&dp/ex03e2/mcm_bottom_up.cpp)
add_executable(barcode src/grader/dc&dp/ex02m2/barcode.cpp)
add_executable(lcs src/grader/dc&dp/ex03e1/lcs.cpp)
add_executable(quicksum src/grader/dc&dp/a59_q1_quicksum/quicksum.cpp)
add_executable(lis src/grader/dc&dp/ex03m2/lis.cpp)
add_executable(coin src/grader/dc&dp/ex03e3/coin.cpp)
add_executable(pressure_station src/grader/dc&dp/ex03m3/pressure_station.cpp)
add_executable(square src/grader/dc&dp/ex03h1/square.cpp)
add_executable(walk src/grader/dc&dp/a60a_midp4_walk/walk.cpp)
add_executable(bigger_billboard src/grader/dc&dp/a60a_midp3_bigger/bigger_billboard.cpp)
add_executable(lcs_text src/grader/dc&dp/a59_midp1_lcs/lcs_text.cpp)
add_executable(knapsack_items src/grader/dc&dp/a60a_midp1_knapsack/knapsack_items.cpp)
add_executable(rope src/grader/dc&dp/a60b_midp2_rope/rope.cpp)
add_executable(dividing src/grader/dc&dp/a60b_midp3_divide/dividing.cpp)
add_executable(jumping src/grader/dc&dp/a62_q1a_jumping/jumping.cpp)
add_executable(buffet src/grader/dc&dp/a63_q1a_buffet/buffet.cpp)
add_executable(diagsum src/grader/dc&dp/a60b_q1_diagsum/diagsum.cpp)
add_executable(twoside src/grader/dc&dp/a63_q1b_2side/twoside.cpp)
add_executable(oneohone src/grader/dc&dp/a63_q1a_101/oneohone.cpp)
add_executable(tile src/grader/dc&dp/a57_m3_tile/tile.cpp)
add_executable(chocolate src/grader/dc&dp/a62_q1b_chocolate/chocolate.cpp)
add_executable(teamwork src/grader/dc&dp/ex04e3/teamwork.cpp)
add_executable(buffet_line src/grader/dc&dp/a60b_mid_p1_buffet/buffet_line.cpp)
add_executable(fknapscak src/grader/dc&dp/ex04e2/fknapscak.cpp)
add_executable(interval src/grader/dc&dp/ex04e1/interval.cpp)
add_executable(sort src/grader/dc&dp/ex04m1/sort.cpp)
add_executable(drainage src/grader/dc&dp/a57_f3_drainage/drainage.cpp)
add_executable(supply src/grader/dc&dp/a57_m4_supply/supply.cpp)
add_executable(table_no_11 src/grader/dc&dp/a64_q2_table_no_11/table_no_11.cpp)
add_executable(two_mcs src/grader/dc&dp/a64_q2_two_mcs/two_mcs.cpp)


# Build targets for src/grader/graph
add_executable(shortest_path src/grader/graph/ex05e1/shortest_path.cpp)
add_executable(catapult src/grader/graph/ex05e3/catapult.cpp)
add_executable(detecting_cycle src/grader/graph/ex05m1/detecting_cycle.cpp)
add_executable(connection src/grader/graph/ex05m2/connection.cpp)
add_executable(component src/grader/graph/a60a_q3_component/component.cpp)
add_executable(perimeter src/grader/graph/a60b_q3_perimeter/perimeter.cpp)
add_executable(line_graph src/grader/graph/a62_q2a_line_graph/line_graph.cpp)
add_executable(pandemic src/grader/graph/a62_q2a_pandemic/pandemic.cpp)
add_executable(columbia src/grader/graph/ex06e3/columbia.cpp)
add_executable(shortest_with_negative src/grader/graph/ex06e2/shortest_with_negative.cpp)
add_executable(farthest src/grader/graph/a61_q2_farthest/farthest.cpp)
add_executable(hole src/grader/graph/a59_q3_hole/hole.cpp)
add_executable(cable_company src/grader/graph/ex06e1/cable_company.cpp)
add_executable(mass_relay src/grader/graph/ex06m1/mass_relay.cpp)
add_executable(cycle_in_tree src/grader/graph/a59_q3_cycle/cycle_in_tree.cpp)
add_executable(ikea src/grader/graph/a60b_q3_ikea/ikea.cpp)
add_executable(planning src/grader/graph/ex05e2/planning.cpp)